Prettier and Volar settings

--- a/settings.json
+++ b/settings.json
@@ -260,7 +260,6 @@
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "vetur.format.options.useTabs": true,
-  "editor.insertSpaces": false,
   "typescript.updateImportsOnFileMove.enabled": "always",
   "vetur.completion.tagCasing": "initial",
   "vetur.validation.templateProps": true,
@@ -288,9 +287,7 @@
   "volar.completion.preferredTagNameCase": "pascal",
   "terminal.integrated.enableMultiLinePasteWarning": false,
   "editor.minimap.enabled": false,
-  "volar.autoCompleteRefs": true,
   "volar.completion.autoImportComponent": false,
-  "volar.codeLens.scriptSetupTools": true,
   "workbench.editor.splitInGroupLayout": "vertical",
   "diffEditor.codeLens": true,
   "editor.find.addExtraSpaceOnTop": false,
@@ -335,5 +332,17 @@
   "typescript.format.semicolons": "remove",
   "css.completion.completePropertyWithSemicolon": false,
   "less.completion.completePropertyWithSemicolon": false,
-  "scss.completion.completePropertyWithSemicolon": false
+  "scss.completion.completePropertyWithSemicolon": false,
+  "prettier.arrowParens": "avoid",
+  "volar.autoWrapParentheses": false,
+  "volar.codeLens.references": false,
+  "volar.icon.preview": false,
+  "volar.icon.splitEditors": false,
+  "less.format.spaceAroundSelectorSeparator": true,
+  "css.format.spaceAroundSelectorSeparator": true,
+  "scss.format.spaceAroundSelectorSeparator": true,
+  "vsintellicode.features.apiExamplests": "enabled",
+  "vsintellicode.features.apiExamples": "disabled",
+  "vsintellicode.features.python.deepLearning": "disabled",
+  "vsintellicode.python.completionsEnabled": false
 }
