--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,13 @@
 {
+  "arrowParens": "avoid",
+  "bracketSameLine": false,
+  "bracketSpacing": false,
   "semi": true,
-  "trailingComma": "es5",
+  "singleAttributePerLine": false,
   "singleQuote": true,
   "printWidth": 1000,
-  "useTabs": false,
+  "quoteProps": "as-needed",
   "tabWidth": 2,
-  "bracketSameLine": false,
-  "bracketSpacing": true,
-  "singleAttributePerLine": false
+  "trailingComma": "es5",
+  "useTabs": false
 }
